Add resilience support, returns partial paginated results instead of complete failure.